fix(css): code block overflow #117

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,8 @@
 main { @apply text-lg; }
 main p { @apply pb-5; }
 
+:root { color-scheme: dark; }
+
 main h6 { @apply py-7 font-bold text-xl; }
 main h5 { @apply py-7 font-bold text-xl; }
 main h4 { @apply py-7 font-bold text-2xl; }
@@ -15,7 +17,7 @@ main h2 { @apply py-7 font-bold text-3xl; }
 main h1 { @apply py-7 font-bold text-4xl; }
 
 .highlight { @apply shadow-2xl rounded-xl my-5; }
-pre { @apply py-5 px-10 rounded-xl; }
+pre { @apply py-5 px-10 rounded-xl overflow-auto;}
 
 blockquote { @apply ml-36 pl-6 border-l-8 border-gray-700 font-serif; }
 
@@ -35,5 +37,4 @@ main a:hover { @apply text-gray-300 bg-gray-900; }
 
 .pagination { @apply flex place-content-center text-lg; }
 .pagination ul { @apply flex list-none; }
-.pagination a { @apply px-4 py-2 mx-2
-}
+.pagination a { @apply px-4 py-2 mx-2; }
